Fixed responsiveness (able to see shadow effect when scroll to end on mobile)

--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,9 @@ html,
 body,
 #root {
   height: 100%;
+  width: 100%;
   display: flex;
+  overflow-x: hidden;
   flex-flow: column;
 }
 #root > div {
